# camera-calibration

./: .gitignore  README.md  defs.py  main_widget.spec  pyproject.toml  requirements.txt
camera_calibration/: __init__.py  main_widget.py  menu_bar.py
camera_calibration/custom_components/: __init__.py  custom_scroll_area.py  dock_base.py  droppable.py  flow_layout.py  gui_save_base.py  my_colors.py
camera_calibration/display_widgets/: __init__.py  camera_display.py  image_display.py
camera_calibration/docks/: __init__.py  dock_calibrate.py  dock_camera.py  dock_pattern.py
camera_calibration/funcs/: __init__.py  coord_transform.py  draw_cal_pattern.py  opencv_camera.py
camera_calibration/workers/: worker_stream.py
