[tool.poetry]
name = "camera-calibration"
version = "0.1.0"
description = "Intrinsic calibration of camera"
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"
packages = [{ include = "camera_calibration" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-contrib-python-headless = "^4.8.1.78"
PySide6 = "^6.6.0"
QtAwesome = "^1.2.3"
superqt = "^0.6.1"
pyqtgraph = "^0.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
camera_calibration = "camera_calibration.main_widget:main"
